# ascii_table_generator

./: .gitignore  Cargo.toml  README.md
ascii_table_frontend/: Cargo.toml  build.sh  index.html  run.sh
ascii_table_frontend/src/: lib.rs
ascii_table_generator/: Cargo.toml
ascii_table_generator/src/: lib.rs
