[package]
name = "ascii_table_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ascii_table_generator = { path="../ascii_table_generator" }
wasm-bindgen = "0.2"
js-sys = "0.3"
# leptos = { version = "0.5.0-rc1", features = ["csr", "nightly"] }
